Fixing up how forms work and adding caption animation to the galleries
git-svn-id: https://plugins.svn.wordpress.org/slideshow-satellite/branches/1.2.1@595066 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/admin-styles.css
+++ b/css/admin-styles.css
@@ -34,6 +34,9 @@ root {
     background-color:#eef5fb; 
     padding:10px;
 }
+#satl_table .howto {
+    margin-bottom:10px;
+}
 .togbox {
     padding: 0;
     width: 22px;
@@ -98,3 +101,4 @@ root {
 .ui-sortable  .thumb img {
     cursor: pointer;
 }
+#satl_table
