--- a/css/admin-styles.css
+++ b/css/admin-styles.css
@@ -101,4 +101,15 @@ root {
 .ui-sortable  .thumb img {
     cursor: pointer;
 }
-#satl_table
+.verttop {
+    vertical-align: top;
+}
+.star-rating {
+    background: transparent url('../images/5star.jpg') bottom;
+    height:20px;
+    width:102px;
+    display:block;
+}
+.star-rating:hover {
+    background-position: top;
+}
