adding default nav_opacity and adding fixing css typo
git-svn-id: https://plugins.svn.wordpress.org/slideshow-satellite/branches/1.2.1@606299 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/admin-styles.css
+++ b/css/admin-styles.css
@@ -71,7 +71,7 @@ root {
 #misc-publishing-actions.preminfo {
     padding: 2px 15px;
 }
-.metabox-holder lable {
+.metabox-holder label {
     width:auto;
 }
 .metabox-holder input, .metabox-holder textarea, .metabox-holder select, .metabox-holder .uneditable-input {
