--- a/css/orbit-1.3.0.css
+++ b/css/orbit-1.3.0.css
@@ -23,7 +23,7 @@
 /* CONTAINER
    ================================================== */
 
-div.orbit-wrapper {
+div.satl-wrapper {
     width: 1px;
     height: 1px;
     position: relative; }
@@ -55,7 +55,7 @@ div.orbit>a {
     width: 100%;
     height: 100%; }
 
-/* Note: If your slider only uses content or anchors, you're going to want to put the width and height declarations on the ".orbit>div" and "div.orbit>a" tags in addition to just the .orbit-wrapper */
+/* Note: If your slider only uses content or anchors, you're going to want to put the width and height declarations on the ".orbit>div" and "div.orbit>a" tags in addition to just the .satl-wrapper */
 
 
 /* TIMER
@@ -126,7 +126,7 @@ span.pause.active {
     display: none;
     font-family: "HelveticaNeue", "Helvetica-Neue", Helvetica, Arial, sans-serif; }
 
-.orbit-wrapper .orbit-caption {
+.satl-wrapper .orbit-caption {
     background: #000;
     background: rgba(0,0,0,.6);
     z-index: 1000;
@@ -143,10 +143,10 @@ span.pause.active {
 /* DIRECTIONAL NAV
    ================================================== */
 
-div.slider-nav {
+div.satl-nav {
     display: block }
 
-div.slider-nav span {
+div.satl-nav span {
     width: 78px;
     height: 100px;
     text-indent: -9999px;
@@ -156,11 +156,11 @@ div.slider-nav span {
     margin-top: -50px;
     cursor: pointer; }
 
-div.slider-nav span.right {
+div.satl-nav span.right {
     background: url(orbit/right-arrow.png);
     right: 0; }
 
-div.slider-nav span.left {
+div.satl-nav span.left {
     background: url(orbit/left-arrow.png);
     left: 0; }
 
