--- a/css/orbit-1.3.1.css
+++ b/css/orbit-1.3.1.css
@@ -93,8 +93,8 @@ div.sorbit-wide {
     display: table-cell;
     text-align:center;
     vertical-align:middle;
-    height: 300px; 
-    width: 450px; 
+/*    height: 300px; 
+    width: 450px; */
     max-width:450px;
     }
 div.resp div.sorbit-wide {
@@ -451,10 +451,14 @@ ul.orbit-thumbnails {
 .full-left .satl-wrapper {
     margin-left:0px !important;
 }
+.full-right.shrunk .satl-wrapper {
+    margin-left: 0px !important;
+}
 .full-right .orbit-thumbnails, .full-left .orbit-thumbnails {
     margin: 0 !important;
     left:0;
-    width:255px !important;
+    /*width:255px !important;*/
+    width:100%;
     position:relative;
 }
 .full-right .orbit-thumbnails {
@@ -471,7 +475,8 @@ ul.orbit-thumbnails {
     float:left;
 }
 .full-right .thumbholder, .full-left .thumbholder {
-    width: 275px;
+    max-width: 275px;
+    width: 100%;
     height: 100%;
     overflow-y:auto;
     overflow-x:hidden;
@@ -481,6 +486,9 @@ ul.orbit-thumbnails {
     margin:0 0 0 450px;
     padding-left: 20px;
     left:0;
+}
+.full-right.shrunk .thumbholder {
+    padding-left:25px;
 }
 .full-left .thumbholder {
     margin: 0 30px 0 0;
