Fixing transition = none, setLeftMargin moves timer now too
git-svn-id: https://plugins.svn.wordpress.org/slideshow-satellite/branches/1.4@656431 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/orbit-1.3.1.css
+++ b/css/orbit-1.3.1.css
@@ -466,7 +466,7 @@ ul.orbit-thumbnails {
     padding-bottom: 25px !important;
 }
 .full-left.shrunk .orbit-thumbnails {
-    padding-left:5px;
+    /*padding-left:5px;*/
 }
 .full-right .orbit-thumbnails {
     float: right;
@@ -500,6 +500,7 @@ ul.orbit-thumbnails {
 .full-left .thumbholder {
     margin: 0 30px 0 0;
     right:0;
+    width: 275px;
 }
 .full-left .thumbholder {
     margin-left:0px !important;
@@ -508,10 +509,11 @@ ul.orbit-thumbnails {
     padding: 0;
 }
 .full-right div.orbit-caption {
-    width:450px;
+    width:100%;
+    left:0px !important;
 }
 .full-left div.orbit-caption {
-    width:450px;
+    width:100%;
     left:305px;
 }
 .full-left div.sattext {
