--- a/css/orbit-1.3.1.css
+++ b/css/orbit-1.3.1.css
@@ -574,6 +574,7 @@ ul.orbit-thumbnails {
     border-radius:4px;
     border: 2px solid #000000;
     margin:3px;
+    float:left;
 }
 
 .satl-gal-titles {
