--- a/css/admin-styles.css
+++ b/css/admin-styles.css
@@ -122,3 +122,6 @@ root {
 #toplevel_page_satellite ul {
     list-style:none;
 }
+.toplevel_page_satellite .inner-sidebar #side-sortables {
+  min-height:0px;
+}
