--- a/css/admin-styles.css
+++ b/css/admin-styles.css
@@ -9,6 +9,9 @@
 root { 
     display: block;
 }
+body.toplevel_page_satellite {
+  background-color : #FFF;
+}
 .satsection-header {
     height: 24px;
     color: #666;
@@ -66,6 +69,7 @@ root {
 #poststuff h3 {
     padding: 12px;
     font-size:1.6em;
+    clear:none;
 }
 
 #misc-publishing-actions.preminfo {
