fixing some styling and adding in better resize info
git-svn-id: https://plugins.svn.wordpress.org/slideshow-satellite/branches/2.1@670847 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/admin-styles.css
+++ b/css/admin-styles.css
@@ -9,7 +9,7 @@
 root { 
     display: block;
 }
-body.toplevel_page_satellite {
+body.toplevel_page_satellite, body.satellite_page_satellite-galleries, body.satellite_page_satellite-slides {
   background-color : #FFF;
 }
 .satsection-header {
