Fixing thickbox issues and preparing for 2.0.2 release
git-svn-id: https://plugins.svn.wordpress.org/slideshow-satellite/branches/2.1@677144 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/admin-styles.css
+++ b/css/admin-styles.css
@@ -11,6 +11,7 @@ root {
 }
 body.toplevel_page_satellite, body.satellite_page_satellite-galleries, body.satellite_page_satellite-slides {
   background-color : #FFF;
+  background-image : none;
 }
 .satsection-header {
     height: 24px;
