simple css fixes
git-svn-id: https://plugins.svn.wordpress.org/slideshow-satellite/branches/2.1@687699 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/orbit-1.3.1.css
+++ b/css/orbit-1.3.1.css
@@ -45,7 +45,7 @@ div.satl-align-right .satl-wrapper {
 div.orbit {
     width: 1px;
     height: 1px;
-    position: absolute;
+    position: absolute !important;
     overflow: hidden;
     z-index:40;}
 
