updating admin config views -adding sort and switching gallery to slides
git-svn-id: https://plugins.svn.wordpress.org/slideshow-satellite/branches/2.1@698305 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/admin-styles.css
+++ b/css/admin-styles.css
@@ -152,3 +152,9 @@ body.toplevel_page_satellite, body.satellite_page_satellite-galleries, body.sate
 .loader-section { width: 10%;}
 .loader-date {width: 15%; }
 .loader-order { width: 10%;}
+
+#gallery-slide-switch {
+  float:right;
+  display:block;
+  font-size:1.2em;
+}
