Finishing Infinite Scroll and misc errors
git-svn-id: https://plugins.svn.wordpress.org/slideshow-satellite/branches/2.1@704800 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/admin-styles.css
+++ b/css/admin-styles.css
@@ -153,8 +153,20 @@ body.toplevel_page_satellite, body.satellite_page_satellite-galleries, body.sate
 .loader-date {width: 15%; }
 .loader-order { width: 10%;}
 
+/**** Slides Page ******/
+
 #gallery-slide-switch {
   float:right;
   display:block;
   font-size:1.2em;
+  clear:both;
+}
+
+.viewonly form {
+  margin:0;
+}
+
+/**** Angular Specific ****/
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none;
 }
