--- a/css/orbit-1.3.1.css
+++ b/css/orbit-1.3.1.css
@@ -80,6 +80,10 @@ div.orbit>a {
 /* Note: If your slider only uses content or anchors, you're going to want to put the width and height declarations on the ".orbit>div" and "div.orbit>a" tags in addition to just the .satl-wrapper */
 /* SPECIAL IMAGES */
 
+.display-none {
+  display: none;
+}
+
 div.sorbit-tall, div.sorbit-wide, div.sorbit-basic {
     background:#000; 
     }
@@ -667,4 +671,21 @@ ul.orbit-thumbnails {
 .satl-gal-title a:hover {
     text-decoration:none;
     color:#FFF;
+}
+
+/**** Infinite Scroll ******/
+.satellite-infinite .info-hold {
+  position:relative;
+}
+.satellite-infinite .title {
+  background: rgba(0,0,0,.5);
+  float:right;
+  color:#FFF; 
+  padding:10px; 
+  font-size:1.4em; 
+  font-weight:bold;
+  line-height:1em;
+  position: absolute;
+  top: 0;
+  right:0;
 }
