Adding text-size ability for infinite scroll
git-svn-id: https://plugins.svn.wordpress.org/slideshow-satellite/branches/2.1@704820 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/orbit-1.3.1.css
+++ b/css/orbit-1.3.1.css
@@ -225,13 +225,13 @@ span.pause.active {
     font-weight:bold;
     line-height:1em;
     }
-.satl-wrapper .orbit-caption h5.size-2 {
+.satl-wrapper .orbit-caption h5.size-2, .satellite-infinite .title.size-2 {
     font-size:2em;
 }
-.satl-wrapper .orbit-caption h5.size-3 {
+.satl-wrapper .orbit-caption h5.size-3, .satellite-infinite .title.size-3 {
     font-size:3em;
 }
-.satl-wrapper .orbit-caption h5.size-4 {
+.satl-wrapper .orbit-caption h5.size-4, .satellite-infinite .title.size-4 {
     font-size:4em;
 }
 
