--- a/css/admin-styles.css
+++ b/css/admin-styles.css
@@ -15,6 +15,7 @@ body.toplevel_page_satellite, body.satellite_page_satellite-galleries, body.sate
 }
 .fl-l { float:left }
 .fl-r { float: right }
+.no-display { display:none }
 .satsection-header {
     height: 24px;
     color: #666;
@@ -164,6 +165,9 @@ body.toplevel_page_satellite, body.satellite_page_satellite-galleries, body.sate
 
 .viewonly form {
   margin:0;
+}
+.edit {
+  cursor:pointer;
 }
 
 /**** Angular Specific ****/
