--- a/css/orbit-1.3.1.css
+++ b/css/orbit-1.3.1.css
@@ -133,6 +133,26 @@ a.sorbit-link {
     left:0;
     right:0;
     }
+div.stretchCenter {
+    width: 100%; 
+    height: 100%; 
+    position: absolute; 
+    left: 0px; 
+    top: 0px; 
+    z-index: 0;
+    display:table-cell;
+    vertical-align:middle;
+}
+img.stretchCenter.tall {
+    height: 100%;
+    width: auto;
+    margin: auto;
+}
+img.stretchCenter.wide {
+    height: auto;
+    width: 100%;
+    margin: auto;
+}
 /* Sizing */
 img.absoluteCenter {
     max-height:100%;
