--- a/css/orbit-1.3.1.css
+++ b/css/orbit-1.3.1.css
@@ -153,6 +153,14 @@ img.stretchCenter.wide {
     width: 100%;
     margin: auto;
 }
+img.stretchCrop.wide {
+    height:100%;
+    max-width:none !important;
+}
+img.stretchCrop.tall {
+    width:100%;
+    max-height:none !important;
+}
 /* Sizing */
 img.absoluteCenter {
     max-height:100%;
