Adding scroll padding to admin page
git-svn-id: https://plugins.svn.wordpress.org/slideshow-satellite/branches/2.1@731138 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/admin-styles.css
+++ b/css/admin-styles.css
@@ -174,3 +174,9 @@ body.toplevel_page_satellite, body.satellite_page_satellite-galleries, body.sate
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
   display: none;
 }
+
+/**** Infinite Scroll Specific ****/
+
+.scrollSpace {
+  margin-bottom: 400px;
+}
