fixing full-right thumbnail padding
git-svn-id: https://plugins.svn.wordpress.org/slideshow-satellite/branches/2.1@743401 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/orbit-1.3.1.css
+++ b/css/orbit-1.3.1.css
@@ -495,7 +495,7 @@ ul.orbit-thumbnails {
     /*width:255px !important;*/
     width:100%;
     position:relative;
-    padding-bottom: 25px !important;
+    padding: 0 0 25px 0 !important;
 }
 .full-left.shrunk .orbit-thumbnails {
     /*padding-left:5px;*/
@@ -536,9 +536,6 @@ ul.orbit-thumbnails {
 }
 .full-left .thumbholder {
     margin-left:0px !important;
-}
-.full-left .orbit-thumbnails {
-    padding: 0;
 }
 .full-right div.orbit-caption {
     width:100%;
