Adding Use Current Feature under Slides Manager
git-svn-id: https://plugins.svn.wordpress.org/slideshow-satellite/branches/2.1@746455 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/orbit-1.3.1.css
+++ b/css/orbit-1.3.1.css
@@ -416,6 +416,7 @@ ul.orbit-thumbnails {
     margin: 2px auto 0 auto;
     padding-top: 300px;
     background: #000;
+    box-sizing: content-box !important;
 }
     
 .orbit-thumbnails li {
