Fixing some 2013 theme stylings
git-svn-id: https://plugins.svn.wordpress.org/slideshow-satellite/branches/2.1@747341 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/admin-styles.css
+++ b/css/admin-styles.css
@@ -180,3 +180,16 @@ body.toplevel_page_satellite, body.satellite_page_satellite-galleries, body.sate
 .scrollSpace {
   margin-bottom: 400px;
 }
+
+
+/*** Settings Pages ***/
+.satl-settings #poststuff th {
+  text-transform: none;
+}
+.satl-settings input {
+  border: none;
+}
+
+.satl-settings a:visited {
+  color: #FFF;
+}
