fixing captions bottom right etc
git-svn-id: https://plugins.svn.wordpress.org/slideshow-satellite/branches/2.1@747347 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/admin-styles.css
+++ b/css/admin-styles.css
@@ -183,7 +183,7 @@ body.toplevel_page_satellite, body.satellite_page_satellite-galleries, body.sate
 
 
 /*** Settings Pages ***/
-.satl-settings #poststuff th {
+.satl-settings form th {
   text-transform: none;
 }
 .satl-settings input {
@@ -192,4 +192,7 @@ body.toplevel_page_satellite, body.satellite_page_satellite-galleries, body.sate
 
 .satl-settings a:visited {
   color: #FFF;
+}
+input[type="submit"] {
+  padding: 5px 24px 5px;
 }
