Updating for 3.6 update for commit
git-svn-id: https://plugins.svn.wordpress.org/slideshow-satellite/branches/2.1@749572 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/admin-styles.css
+++ b/css/admin-styles.css
@@ -178,7 +178,7 @@ body.toplevel_page_satellite, body.satellite_page_satellite-galleries, body.sate
 /**** Infinite Scroll Specific ****/
 
 .scrollSpace {
-  margin-bottom: 400px;
+  margin-bottom: 415px;
 }
 
 
@@ -190,7 +190,7 @@ body.toplevel_page_satellite, body.satellite_page_satellite-galleries, body.sate
   border: none;
 }
 
-.satl-settings a:visited {
+.satl-settings #gallery-slide-switch a:visited {
   color: #FFF;
 }
 input[type="submit"] {
