--- a/css/admin-styles.css
+++ b/css/admin-styles.css
@@ -76,6 +76,10 @@ body.toplevel_page_satellite, body.satellite_page_satellite-galleries, body.sate
     clear:none;
 }
 
+h3 span {
+    text-transform: none;
+}
+
 #misc-publishing-actions.preminfo {
     padding: 2px 15px;
 }
@@ -145,6 +149,7 @@ body.toplevel_page_satellite, body.satellite_page_satellite-galleries, body.sate
 .slide-holder {
   clear:both;
   display: inline-block;
+  width: 100%;
 }
 .loader-check { width: 4%;margin-left:3px}
 .loader-title { width: 25%;}
@@ -195,4 +200,12 @@ body.toplevel_page_satellite, body.satellite_page_satellite-galleries, body.sate
 }
 input[type="submit"] {
   padding: 5px 24px 5px;
+}
+
+/*** Bootstrap fixes ***/
+input.btn {
+    height: 30px;
+}
+input.btn:active {
+    height: 30px;
 }
