--- a/css/admin-styles.css
+++ b/css/admin-styles.css
@@ -10,7 +10,6 @@ root {
     display: block;
 }
 body.toplevel_page_satellite, body.satellite_page_satellite-galleries, body.satellite_page_satellite-slides {
-  background-color : #FFF;
   background-image : none;
 }
 .fl-l { float:left }
@@ -40,6 +39,11 @@ body.toplevel_page_satellite, body.satellite_page_satellite-galleries, body.sate
 #satl_table {
     background-color:#eef5fb; 
     padding:10px;
+}
+.satl_table {
+    background: #FFF;
+    border: 2px solid #888;
+    padding: 10px;
 }
 #satl_table .howto {
     margin-bottom:10px;
@@ -205,7 +209,9 @@ input[type="submit"] {
 /*** Bootstrap fixes ***/
 input.btn {
     height: 30px;
+    padding: 5px 10px;
 }
 input.btn:active {
     height: 30px;
+    padding: 5px 10px;
 }
