--- a/css/admin-styles.css
+++ b/css/admin-styles.css
@@ -45,6 +45,9 @@ body.toplevel_page_satellite, body.satellite_page_satellite-galleries, body.sate
     border: 2px solid #888;
     padding: 10px;
 }
+#satl_table td, #satl_table th {
+    border: 0;
+}
 #satl_table .howto {
     margin-bottom:10px;
 }
@@ -87,11 +90,22 @@ h3 span {
 #misc-publishing-actions.preminfo {
     padding: 2px 15px;
 }
+/*** Configuration ***/
 .metabox-holder label {
     width:auto;
 }
 .metabox-holder input, .metabox-holder textarea, .metabox-holder select, .metabox-holder .uneditable-input {
     padding:2px;
+}
+table.form-table {
+    display: block;
+}
+
+.form-table input[type=radio] {
+    background: #DDD;
+}
+.form-table label {
+    padding-left:10px;
 }
 
 .filelist {
