Dropdown update and jquery update
git-svn-id: https://plugins.svn.wordpress.org/slideshow-satellite/branches/2.2@881926 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/admin-styles.css
+++ b/css/admin-styles.css
@@ -41,6 +41,9 @@ body.toplevel_page_satellite, body.satellite_page_satellite-galleries, body.sate
     padding:10px;
     border: 0;
 }
+.form-table td, .form-table th {
+    border: 0;
+}
 .satl_table {
     padding: 10px;
 }
